# ovos-stt-plugin-azure

./: CHANGELOG.md  pyproject.toml  readme.md  setup.py
.github/workflows/: build_tests.yml  license_check.yml  license_test.yml  opm-check.yml  publish_alpha.yml  publish_build.yml  publish_major.yml  publish_minor.yml  publish_stable.yml  release-preview.yml  release_workflow.yml  repo-health.yml
ovos_stt_plugin_azure/: __init__.py  version.py
requirements/: requirements.txt
