[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ovos_stt_plugin_azure"
dynamic = ["version"]
description = "ovos azure stt plugin for OpenVoiceO"
readme = "readme.md"
license = {text = "Apache-2.0"}
authors = [{name = "JarbasAi", email = "jarbasai@mailfence.com"}]
keywords = ["mycroft", "OpenVoiceOS", "OVOS", "plugin", "stt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "ovos-plugin-manager>=2.1.1,<3.0.0",
    "ovos-utils>=0.8.4,<1.0.0",
    "requests",
]

[project.optional-dependencies]
test = []

[project.urls]
Homepage = "https://github.com/OpenVoiceOS/ovos-stt-plugin-azure"

[project.entry-points."opm.stt"]
"ovos-stt-plugin-azure" = "ovos_stt_plugin_azure:OVOSAzureSTT"

[tool.setuptools.dynamic]
version = {attr = "ovos_stt_plugin_azure.version.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["ovos_stt_plugin_azure*"]

[tool.setuptools.package-data]
ovos_stt_plugin_azure = ["*.json", "locale/**/*"]
